mysql error message

--- a/app/mysql.html
+++ b/app/mysql.html
@@ -43,6 +43,7 @@
                 <p><b>Host:</b> {{ .DB_Host }}</p>
                 <p><b>DB User:</b> {{ .DB_User }}</p>
                 <p><b>Database Name:</b> {{ .DB_Database }}</p>
+                <p><b>Message:</b> {{ .Message }}</p>
             </div>
         </div>
     </div>
