--- a/app/homepage.html
+++ b/app/homepage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>My Page</title>
+    <title>{{or .Title "Colored Canavas"}}</title>
     <style type="text/css">
         html, body {
             height: 100%;
